force-app/main/default/objects/Fleet_Assertion_Type__mdt/Fleet_Assertion_Type__mdt.object-meta.xml
<CustomObject>
    <label>Fleet Assertion Type</label>
    <pluralLabel>Fleet Assertion Types</pluralLabel>
</CustomObject>