force-app/main/default/objects/Fleet_Assertion_Type__mdt/fields/Default_Severity__c.field-meta.xml
<CustomField>
    <fullName>Default_Severity__c</fullName>
    <label>Default Severity</label>
    <type>Text</type>
    <length>40</length>
</CustomField>