force-app/main/default/objects/Fleet_Assertion_Type__mdt/fields/Evaluation_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Strategy__c</fullName>
    <label>Evaluation Strategy</label>
    <type>Text</type>
    <length>40</length>
</CustomField>