force-app/main/default/objects/Fleet_Assertion_Type__mdt/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <label>Label</label>
    <type>Text</type>
    <length>120</length>
</CustomField>