force-app/main/default/objects/Fleet_Assertion_Type__mdt/fields/Requires_Judge__c.field-meta.xml
<CustomField>
    <fullName>Requires_Judge__c</fullName>
    <label>Requires Judge</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>