force-app/main/default/objects/Fleet_Assertion_Type__mdt/fields/Type_Key__c.field-meta.xml
<CustomField>
    <fullName>Type_Key__c</fullName>
    <label>Type Key</label>
    <type>Text</type>
    <length>80</length>
</CustomField>